fix(outliers): add extra spacing to avoid button cuttoff
related to OPT-3715

--- a/client/src/components/Analysis/OutlierAnalysis/OutlierAnalysis.scss
+++ b/client/src/components/Analysis/OutlierAnalysis/OutlierAnalysis.scss
@@ -17,6 +17,7 @@
   .nodeTooltip {
     text-align: left;
     overflow: hidden;
+    padding: 0 1px;
 
     .tooltipTitle {
       font-weight: normal;
